--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="app-container" />
-    <script src="index.jsx"></script>
+    <script type="module" src="index.jsx"></script>
 </body>
 
 </html>
